gccida/g2/kill_value
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/kill_value/src/regrename.c:1590:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/kill_value/src/regrename.c:1592:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/kill_value/src/regrename.c:1602:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[v4] - 5) > 1 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/kill_value/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/kill_value/src/regrename.c:1681:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[mode] - 5) <= 1 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/kill_value/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/kill_value/src/obj/regrename.o] Error 1
